# ordersctl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  fmt.yml
src/: cost.rs  main.rs  order.rs  orders.rs  providers.rs  status.rs
