[package]
name = "ordersctl"
version = "0.1.0"
authors = ["Alexis Horgix Chotard <alexis.horgix.chotard@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
log = "^0.4"
prettytable-rs = "^0.8"
rusty-money = { version = "^0.4", features = ["iso"] }
rust_decimal = "^1.10"
chrono = "^0.4"