[package]
name = "ordersctl"
version = "0.1.0"
authors = ["Alexis Horgix Chotard <ordersctl@foss.horgix.fr>"]
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
log = "^0.4"
prettytable-rs = "^0.10"
rusty-money = { version = "^0.4", features = ["iso"] }
rust_decimal = "^1.39"
chrono = "^0.4"
itertools = "^0.14"
clap = { version = "4.5.46", features = ["derive", "unstable-doc"] }
